Bug 1555142 - Don't assert if we don't find a -webkit-line-clamp ellipsis when searching for one to clear. r=dholbert

The line the ellipsis was on may have already been removed.

Differential Revision: https://phabricator.services.mozilla.com/D38449